fixed spacing on index pg

--- a/public/styles/rug-index.css
+++ b/public/styles/rug-index.css
@@ -1,5 +1,5 @@
 .content-container {
-    padding: 200px; 
+    padding: 220px; 
 }
 
 h2 {
